// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MaskedCopyableTextField snapshots it matches snapshot when allowMask = false 1`] = `
<div
  className="maskedCopyableTextField"
>
  <div
    className="labelSection"
  >
    <Component
      htmlFor="maskedCopyableTextField1"
    >
      label1
    </Component>
  </div>
  <div
    className="controlSection"
  >
    <div
      className="borderedSection  readOnly"
    >
      <input
        aria-label="ariaLabel1"
        className="input"
        id="maskedCopyableTextField1"
        onChange={[Function]}
        readOnly={true}
        type="text"
        value="value1"
      />
      <input
        aria-hidden={true}
        className="input"
        readOnly={true}
        style={
          Object {
            "height": "1px",
            "opacity": 0,
            "position": "absolute",
            "width": "1px",
          }
        }
        tabIndex={-1}
        value="value1"
      />
    </div>
    <div
      className="copySection"
    >
      <StyledTooltipHostBase
        content="common.maskedCopyableTextField.copy.label"
        id="copyButtonTooltipHost3"
      >
        <CustomizedIconButton
          aria-labelledby="copyButtonTooltipHost3"
          iconProps={
            Object {
              "iconName": "copy",
            }

          }
        }
        onClick={[Function]}
        title="common.maskedCopyableTextField.copy.label"
      />
    </div>
  </div>
</div>
`;

exports[`MaskedCopyableTextField snapshots it matches snapshot when allowMask = true 1`] = `
<div
  className="maskedCopyableTextField"
>
  <div
    className="labelSection"
  >
    <Component
      htmlFor="maskedCopyableTextField4"
    >
      label1
    </Component>
  </div>
  <div
    className="controlSection"
  >
    <div
      className="borderedSection  readOnly"
    >
      <input
        aria-label="ariaLabel1"
        className="input"
        id="maskedCopyableTextField4"
        onChange={[Function]}
        readOnly={true}
        type="password"
        value="value1"
      />
      <input
        aria-hidden={true}
        className="input"
        readOnly={true}
        style={
          Object {
            "height": "1px",
            "opacity": 0,
            "position": "absolute",
            "width": "1px",
          }
        }
        tabIndex={-1}
        value="value1"
      />
<<<<<<< HEAD
      <CustomizedIconButton
        ariaLabel="common.maskedCopyableTextField.toggleMask.ariaLabel"
        iconProps={
          Object {
            "iconName": "RedEye",
=======
      <StyledTooltipHostBase
        content="common.maskedCopyableTextField.toggleMask.label"
        id="toggleMaskButtonTooltipHost5"
      >
        <CustomizedIconButton
          aria-labelledby="toggleMaskButtonTooltipHost5"
          iconProps={
            Object {
              "iconName": "RedEye",
            }
>>>>>>> use ids in all tooltiphost
          }
        }
        onClick={[Function]}
        title="common.maskedCopyableTextField.toggleMask.label"
      />
    </div>
    <div
      className="copySection"
    >
<<<<<<< HEAD
      <CustomizedIconButton
        ariaLabel="common.maskedCopyableTextField.copy.ariaLabel"
        iconProps={
          Object {
            "iconName": "copy",
=======
      <StyledTooltipHostBase
        content="common.maskedCopyableTextField.copy.label"
        id="copyButtonTooltipHost6"
      >
        <CustomizedIconButton
          aria-labelledby="copyButtonTooltipHost6"
          iconProps={
            Object {
              "iconName": "copy",
            }
>>>>>>> use ids in all tooltiphost
          }
        }
        onClick={[Function]}
        title="common.maskedCopyableTextField.copy.label"
      />
    </div>
  </div>
</div>
`;

exports[`MaskedCopyableTextField snapshots it matches snapshot when allowMask = true 2`] = `
<div
  className="maskedCopyableTextField"
>
  <div
    className="labelSection"
  >
    <Component
      htmlFor="maskedCopyableTextField7"
    >
      label1
    </Component>
  </div>
  <div
    className="controlSection"
  >
    <div
      className="borderedSection  readOnly"
    >
      <input
        aria-label="ariaLabel1"
        className="input"
        id="maskedCopyableTextField7"
        onChange={[Function]}
        readOnly={true}
        type="password"
        value="value1"
      />
      <input
        aria-hidden={true}
        className="input"
        readOnly={true}
        style={
          Object {
            "height": "1px",
            "opacity": 0,
            "position": "absolute",
            "width": "1px",
          }
        }
        tabIndex={-1}
        value="value1"
      />
<<<<<<< HEAD
      <CustomizedIconButton
        ariaLabel="common.maskedCopyableTextField.toggleMask.ariaLabel"
        iconProps={
          Object {
            "iconName": "RedEye",
=======
      <StyledTooltipHostBase
        content="common.maskedCopyableTextField.toggleMask.label"
        id="toggleMaskButtonTooltipHost8"
      >
        <CustomizedIconButton
          aria-labelledby="toggleMaskButtonTooltipHost8"
          iconProps={
            Object {
              "iconName": "RedEye",
            }
>>>>>>> use ids in all tooltiphost
          }
        }
        onClick={[Function]}
        title="common.maskedCopyableTextField.toggleMask.label"
      />
    </div>
    <div
      className="copySection"
    >
<<<<<<< HEAD
      <CustomizedIconButton
        ariaLabel="common.maskedCopyableTextField.copy.ariaLabel"
        iconProps={
          Object {
            "iconName": "copy",
=======
      <StyledTooltipHostBase
        content="common.maskedCopyableTextField.copy.label"
        id="copyButtonTooltipHost9"
      >
        <CustomizedIconButton
          aria-labelledby="copyButtonTooltipHost9"
          iconProps={
            Object {
              "iconName": "copy",
            }
>>>>>>> use ids in all tooltiphost
          }
        }
        onClick={[Function]}
        title="common.maskedCopyableTextField.copy.label"
      />
    </div>
  </div>
</div>
`;

exports[`MaskedCopyableTextField snapshots it matches snapshot when error message specified 1`] = `
<div
  className="maskedCopyableTextField"
>
  <div
    className="labelSection"
  >
    <Component
      htmlFor="maskedCopyableTextField10"
    >
      label1
    </Component>
  </div>
  <div
    className="controlSection"
  >
    <div
      className="borderedSection error readOnly"
    >
      <input
        aria-label="ariaLabel1"
        className="input"
        id="maskedCopyableTextField10"
        onChange={[Function]}
        readOnly={true}
        type="password"
        value="value1"
      />
      <input
        aria-hidden={true}
        className="input"
        readOnly={true}
        style={
          Object {
            "height": "1px",
            "opacity": 0,
            "position": "absolute",
            "width": "1px",
          }
        }
        tabIndex={-1}
        value="value1"
      />
<<<<<<< HEAD
      <CustomizedIconButton
        ariaLabel="common.maskedCopyableTextField.toggleMask.ariaLabel"
        iconProps={
          Object {
            "iconName": "RedEye",
=======
      <StyledTooltipHostBase
        content="common.maskedCopyableTextField.toggleMask.label"
        id="toggleMaskButtonTooltipHost11"
      >
        <CustomizedIconButton
          aria-labelledby="toggleMaskButtonTooltipHost11"
          iconProps={
            Object {
              "iconName": "RedEye",
            }
>>>>>>> use ids in all tooltiphost
          }
        }
        onClick={[Function]}
        title="common.maskedCopyableTextField.toggleMask.label"
      />
    </div>
    <div
      className="copySection"
    >
<<<<<<< HEAD
      <CustomizedIconButton
        ariaLabel="common.maskedCopyableTextField.copy.ariaLabel"
        iconProps={
          Object {
            "iconName": "copy",
=======
      <StyledTooltipHostBase
        content="common.maskedCopyableTextField.copy.label"
        id="copyButtonTooltipHost12"
      >
        <CustomizedIconButton
          aria-labelledby="copyButtonTooltipHost12"
          iconProps={
            Object {
              "iconName": "copy",
            }
>>>>>>> use ids in all tooltiphost
          }
        }
        onClick={[Function]}
        title="common.maskedCopyableTextField.copy.label"
      />
    </div>
  </div>
  <div
    className="errorSection"
  >
    error
  </div>
</div>
`;
